- Quedaba por implementar la funcionalidad de las eliminaciones, que es lo que se ha hecho. - Aún queda por corregir errores y hacer el JavaDoc.

--- a/src/vista/G_Completa.form
+++ b/src/vista/G_Completa.form
@@ -324,6 +324,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Eliminar experto"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bt_eliminarExpertoActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
@@ -529,6 +532,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Eliminar caso"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bt_eliminarCasoActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="bt_insertarCaso">
                   <Properties>
@@ -727,6 +733,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Eliminar colaboraci&#xf3;n"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bt_eliminarColaborarActionPerformed"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
